# neuron

./: .envrc  .gitignore  .lychee.toml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT-LOG.md  NEURON-REDESIGN-PLAN.md  PROMPT.md  PR_BODY_prepare-release.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SPECS.md  deny.toml  fix_plan.md  flake.nix  llms.txt  neuron-vs-competitors-2026.json  neuron-vs-competitors-2026.md  ralph_queue.md  release-please-config.json  tarpaulin.toml
.github/: CODEOWNERS  pull_request_template.md
.golden/: README.md  neuron-bridge.json
agent-blocks/: Cargo.toml  README.md
agent-blocks/src/: lib.rs
agent-blocks/tests/: composition.rs  smoke_anthropic.rs  smoke_ollama.rs  smoke_openai.rs
agent-context/: Cargo.toml  README.md
agent-context/src/: counter.rs  injector.rs  lib.rs  persistent.rs  strategies.rs
agent-context/tests/: composite.rs  counter.rs  injector.rs  persistent.rs  sliding_window.rs  summarization.rs  tool_result_clearing.rs
agent-loop/: CLAUDE.md  Cargo.toml  README.md
agent-loop/src/: config.rs  lib.rs  loop_impl.rs  step.rs
agent-loop/tests/: builder.rs  integration.rs
agent-mcp/: CLAUDE.md  Cargo.toml  README.md
agent-mcp/src/: bridge.rs  client.rs  error.rs  lib.rs  server.rs  types.rs
agent-mcp/tests/: integration.rs
agent-provider-anthropic/: CLAUDE.md  Cargo.toml  README.md
agent-provider-anthropic/examples/: basic.rs
agent-provider-anthropic/src/: client.rs  error.rs  lib.rs  mapping.rs  streaming.rs
agent-provider-anthropic/tests/: integration.rs
agent-provider-ollama/: CLAUDE.md  Cargo.toml  README.md
agent-provider-ollama/examples/: basic.rs
agent-provider-ollama/src/: client.rs  error.rs  lib.rs  mapping.rs  streaming.rs
agent-provider-ollama/tests/: integration.rs
agent-provider-openai/: CLAUDE.md  Cargo.toml  README.md
agent-provider-openai/examples/: basic.rs
agent-provider-openai/src/: client.rs  error.rs  lib.rs  mapping.rs  streaming.rs
agent-provider-openai/tests/: integration.rs
agent-runtime/: CLAUDE.md  Cargo.toml  README.md
agent-runtime/src/: durable.rs  guardrail.rs  lib.rs  sandbox.rs  session.rs  sub_agent.rs
agent-runtime/tests/: integration.rs
agent-tool/: Cargo.toml  README.md
agent-tool-macros/: Cargo.toml  README.md
agent-tool-macros/src/: lib.rs
agent-tool/src/: builtin.rs  lib.rs  middleware.rs  registry.rs
agent-tool/tests/: builtin.rs  derive.rs  middleware_chain.rs  registry.rs
agent-types/: CLAUDE.md  Cargo.toml  README.md
agent-types/src/: error.rs  lib.rs  stream.rs  traits.rs  types.rs  wasm.rs
agent-types/tests/: completion.rs  errors.rs  messages.rs  provider_trait.rs  stream.rs  tool_trait.rs  tool_types.rs  traits.rs
brain/: Cargo.toml
brain/src/: lib.rs  main.rs  testing.rs  v2.rs
brain/tests/: job_groups_v2.rs  offline_integration.rs  research_backend_v2.rs
brain/tests/fixtures/merge/job_a/: index.json  job.json
brain/tests/fixtures/merge/job_b/: index.json  job.json
docs/: competitive-analysis.md
layer0/: CHANGELOG.md  Cargo.toml  README.md
layer0/src/: content.rs  duration.rs  effect.rs  environment.rs  error.rs  hook.rs  id.rs  lib.rs  lifecycle.rs  operator.rs  orchestrator.rs  secret.rs  state.rs  turn.rs
layer0/src/test_utils/: echo_operator.rs  echo_turn.rs  in_memory_store.rs  local_environment.rs  local_orchestrator.rs  logging_hook.rs  mod.rs
layer0/tests/: phase1.rs  phase2.rs
neuron/: Cargo.toml  (+2 more)
neuron-auth/: Cargo.toml
neuron-auth-file/: Cargo.toml
neuron-auth-k8s/: Cargo.toml
neuron-auth-oidc/: Cargo.toml
neuron-auth-static/: Cargo.toml
neuron-context/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
neuron-context/benches/: compaction.rs
neuron-context/examples/: compaction.rs
neuron-context/neuron-context/: CHANGELOG.md
neuron-context/src/: counter.rs  injector.rs  lib.rs  persistent.rs  strategies.rs
neuron-context/tests/: composite.rs  counter.rs  injector.rs  persistent.rs  proptest_strategies.rs  sliding_window.rs  summarization.rs  tool_result_clearing.rs
neuron-crypto/: Cargo.toml
neuron-crypto-hardware/: Cargo.toml
neuron-crypto-vault/: Cargo.toml
neuron-effects-core/: Cargo.toml
neuron-effects-local/: Cargo.toml
neuron-env-local/: Cargo.toml
neuron-env-local/src/: lib.rs
neuron-env-local/tests/: env.rs
neuron-hook-security/: Cargo.toml
neuron-hook-security/src/: lib.rs
neuron-hooks/: Cargo.toml  README.md
neuron-hooks/src/: lib.rs
neuron-loop/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
neuron-loop/benches/: turn_latency.rs
neuron-loop/examples/: agent_loop.rs  cancellation.rs  multi_turn.rs  parallel_tools.rs
neuron-loop/neuron-loop/: CHANGELOG.md
neuron-loop/src/: config.rs  lib.rs  loop_impl.rs  step.rs
neuron-loop/tests/: builder.rs  integration.rs
neuron-mcp/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
neuron-mcp/examples/: mcp_client.rs
neuron-mcp/neuron-mcp/: CHANGELOG.md
neuron-mcp/src/: bridge.rs  client.rs  error.rs  lib.rs  server.rs
neuron-mcp/tests/: integration.rs
neuron-op-react/: Cargo.toml
neuron-op-react/src/: lib.rs
neuron-op-single-shot/: Cargo.toml
neuron-op-single-shot/src/: lib.rs
neuron-orch-kit/: Cargo.toml
neuron-orch-kit/src/: kit.rs  lib.rs  runner.rs
neuron-orch-kit/tests/: runner.rs
neuron-orch-local/: Cargo.toml  README.md
neuron-otel/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
neuron-provider-anthropic/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
neuron-provider-ollama/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
neuron-provider-openai/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
neuron-runtime/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
neuron-secret/: Cargo.toml
neuron-secret-aws/: Cargo.toml
neuron-secret-env/: Cargo.toml
neuron-secret-gcp/: Cargo.toml
neuron-secret-k8s/: Cargo.toml
neuron-secret-keystore/: Cargo.toml
neuron-secret-vault/: Cargo.toml
neuron-state-fs/: Cargo.toml
(+309 files in other folders)
