[workspace]
resolver = "3"
members = [
    "neuron-types",
    "neuron-tool-macros",
    "neuron-tool",
    "neuron-context",
    "neuron-loop",
    "neuron-provider-anthropic",
    "neuron-provider-openai",
    "neuron-provider-ollama",
    "neuron-mcp",
    "neuron-runtime",
    "neuron",
]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal
neuron-types = { path = "neuron-types" }
neuron-tool = { path = "neuron-tool" }
neuron-tool-macros = { path = "neuron-tool-macros" }
neuron-context = { path = "neuron-context" }
neuron-loop = { path = "neuron-loop" }
neuron-runtime = { path = "neuron-runtime" }
neuron-mcp = { path = "neuron-mcp" }
neuron-provider-anthropic = { path = "neuron-provider-anthropic" }
neuron-provider-openai = { path = "neuron-provider-openai" }
neuron-provider-ollama = { path = "neuron-provider-ollama" }
neuron = { path = "neuron" }

# External
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
schemars = "0.8"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-stream = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Dev-only
wiremock = "0.6"
tempfile = "3"
