[workspace]
resolver = "3"
members = [
    "neuron-types",
    "neuron-tool-macros",
    "neuron-tool",
    "neuron-context",
    "neuron-loop",
    "neuron-provider-anthropic",
    "neuron-provider-openai",
    "neuron-provider-ollama",
    "neuron-mcp",
    "neuron-runtime",
    "neuron",
]
exclude = [
    "neuron-provider-openai/fuzz",
    "neuron-provider-anthropic/fuzz",
    "neuron-provider-ollama/fuzz",
]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/secbear/neuron"
homepage = "https://github.com/secbear/neuron"

[workspace.dependencies]
# Internal
neuron-types = { version = "0.2.0", path = "neuron-types" }
neuron-tool = { version = "0.2.0", path = "neuron-tool" }
neuron-tool-macros = { version = "0.2.0", path = "neuron-tool-macros" }
neuron-context = { version = "0.2.0", path = "neuron-context" }
neuron-loop = { version = "0.2.0", path = "neuron-loop" }
neuron-runtime = { version = "0.2.0", path = "neuron-runtime" }
neuron-mcp = { version = "0.2.0", path = "neuron-mcp" }
neuron-provider-anthropic = { version = "0.2.0", path = "neuron-provider-anthropic" }
neuron-provider-openai = { version = "0.2.0", path = "neuron-provider-openai" }
neuron-provider-ollama = { version = "0.2.0", path = "neuron-provider-ollama" }
neuron = { version = "0.2.0", path = "neuron" }

# External
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
schemars = "0.8"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-stream = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Dev-only
wiremock = "0.6"
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
