[workspace]
resolver = "2"
members = [
  "layer0",
  "neuron-state-memory",
  "neuron-state-fs",
  "neuron-env-local",
  "neuron-orch-local",
  "neuron-hooks",
  "neuron-tool",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/secbear/neuron"
homepage = "https://github.com/secbear/neuron"
