[package]
name = "agent-blocks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Umbrella crate for rust-agent-blocks — composable building blocks for AI agents"
license.workspace = true
repository = "https://github.com/anthropics/rust-agent-blocks"
keywords = ["ai", "agent", "blocks", "composable"]
categories = ["development-tools"]

[features]
default = ["anthropic"]
anthropic = ["dep:agent-provider-anthropic"]
openai = ["dep:agent-provider-openai"]
ollama = ["dep:agent-provider-ollama"]
mcp = ["dep:agent-mcp"]
runtime = ["dep:agent-runtime"]
full = ["anthropic", "openai", "ollama", "mcp", "runtime"]

[dependencies]
agent-types.workspace = true
agent-tool.workspace = true
agent-context.workspace = true
agent-loop.workspace = true
agent-provider-anthropic = { workspace = true, optional = true }
agent-provider-openai = { workspace = true, optional = true }
agent-provider-ollama = { workspace = true, optional = true }
agent-mcp = { workspace = true, optional = true }
agent-runtime = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
