[package]
name = "agent-context"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Context engine with compaction strategies for rust-agent-blocks"
license.workspace = true

[dependencies]
agent-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
