[package]
name = "agent-loop"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Agentic while loop for rust-agent-blocks"
license = "MIT OR Apache-2.0"

[dependencies]
agent-types = { path = "../agent-types" }
agent-tool = { path = "../agent-tool" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
agent-context = { path = "../agent-context" }
schemars = "0.8"
thiserror = "2"
chrono = "0.4"
