[package]
name = "agent-loop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Agentic while loop for rust-agent-blocks"
license.workspace = true
repository = "https://github.com/anthropics/rust-agent-blocks"
keywords = ["ai", "agent", "loop", "llm"]
categories = ["development-tools"]

[dependencies]
agent-types.workspace = true
agent-tool.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
agent-context.workspace = true
schemars.workspace = true
thiserror.workspace = true
chrono.workspace = true
