[package]
name = "agent-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "MCP integration for rust-agent-blocks"
license = "MIT OR Apache-2.0"

[dependencies]
agent-types = { path = "../agent-types" }
agent-tool = { path = "../agent-tool" }
rmcp = { version = "0.16", features = ["client", "server", "transport-io", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
