[package]
name = "agent-provider-ollama"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Ollama provider for rust-agent-blocks"
license = "MIT OR Apache-2.0"

[dependencies]
agent-types = { path = "../agent-types" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
async-stream = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
