[package]
name = "agent-provider-ollama"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Ollama provider for rust-agent-blocks"
license.workspace = true
repository = "https://github.com/anthropics/rust-agent-blocks"
keywords = ["ai", "agent", "ollama", "local"]
categories = ["development-tools"]

[dependencies]
agent-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
async-stream.workspace = true
bytes.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true
