[package]
name = "agent-provider-openai"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "OpenAI provider for rust-agent-blocks"
license.workspace = true
repository = "https://github.com/anthropics/rust-agent-blocks"
keywords = ["ai", "agent", "openai", "gpt"]
categories = ["development-tools"]

[dependencies]
agent-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
async-stream.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true
