[package]
name = "agent-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Production runtime layer for rust-agent-blocks"
license.workspace = true

[dependencies]
agent-types.workspace = true
agent-tool.workspace = true
agent-loop.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["fs", "time"] }
futures.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
agent-context.workspace = true
schemars.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio-util.workspace = true
