[package]
name = "agent-tool"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Tool registry and middleware pipeline for rust-agent-blocks"
license.workspace = true

[dependencies]
agent-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
schemars.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
