[package]
name = "agent-types"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Shared types and traits for rust-agent-blocks"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
schemars = "0.8"
futures = "0.3"
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
