[package]
name = "agent-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Shared types and traits for rust-agent-blocks"
license.workspace = true
repository = "https://github.com/anthropics/rust-agent-blocks"
keywords = ["ai", "agent", "types", "llm"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
schemars.workspace = true
futures.workspace = true
tokio-util.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
