[package]
name = "brain"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
layer0 = { path = "../layer0" }
neuron-context = { path = "../neuron-context" }
neuron-hooks = { path = "../neuron-hooks" }
neuron-mcp = { path = "../neuron-mcp" }
neuron-op-react = { path = "../neuron-op-react" }
neuron-orch-kit = { path = "../neuron-orch-kit" }
neuron-orch-local = { path = "../neuron-orch-local" }
neuron-provider-anthropic = { path = "../neuron-provider-anthropic" }
neuron-provider-ollama = { path = "../neuron-provider-ollama" }
neuron-provider-openai = { path = "../neuron-provider-openai" }
neuron-state-fs = { path = "../neuron-state-fs" }
neuron-state-memory = { path = "../neuron-state-memory" }
neuron-tool = { path = "../neuron-tool" }
neuron-turn = { path = "../neuron-turn" }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
hex = "0.4"
rust_decimal = { version = "1", features = ["serde-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
