[package]
name = "layer0"
version = "0.1.0"
edition = "2021"
description = "Protocol traits for composable agentic AI systems"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
rust_decimal = { version = "1", features = ["serde-str"] }
tokio = { version = "1", features = ["rt"], optional = true }

[features]
default = []
test-utils = ["tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
