[package]
name = "neuron-auth-file"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "File-based auth provider that reads a bearer token from disk"

[dependencies]
neuron-auth = { path = "../neuron-auth" }
async-trait = "0.1"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tempfile = "3"
