[package]
name = "neuron-auth-static"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Static auth provider that always returns the same token (dev/test)"

[dependencies]
neuron-auth = { path = "../neuron-auth" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
