[package]
name = "neuron-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Authentication provider traits for neuron"

[dependencies]
layer0 = { path = "../layer0" }
neuron-secret = { path = "../neuron-secret" }
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
