[package]
name = "neuron-context"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Context engine with compaction strategies for neuron"
license.workspace = true
repository = "https://github.com/secbear/neuron"
keywords = ["ai", "agent", "context", "llm"]
categories = ["development-tools"]

[dependencies]
neuron-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
