[package]
name = "neuron-context"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
description = "LLM context management for long-running agents — sliding window, token counting, and compaction strategies"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/neuron-context"
keywords = ["ai", "agent", "llm", "context", "tokens"]
categories = ["science", "asynchronous"]

[dependencies]
neuron-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "compaction"
harness = false
