[package]
name = "neuron-env-local"
version = "0.1.0"
edition = "2021"
description = "Local (passthrough) Environment implementation for neuron"
license = "MIT OR Apache-2.0"
repository = "https://github.com/secbear/neuron"

[dependencies]
layer0 = { path = "../layer0" }
async-trait = "0.1"
neuron-secret = { path = "../neuron-secret" }
serde_json = "1"

[dev-dependencies]
layer0 = { path = "../layer0", features = ["test-utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
