[package]
name = "neuron-hook-security"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Security hooks for neuron — redaction and exfiltration detection"

[dependencies]
layer0 = { path = "../layer0" }
async-trait = "0.1"
regex = "1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
