[package]
name = "neuron-hooks"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hook registry and composition for neuron"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "hooks", "middleware"]

[dependencies]
layer0 = { path = "../layer0" }
async-trait = "0.1"

[dev-dependencies]
layer0 = { path = "../layer0", features = ["test-utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
