[package]
name = "neuron-loop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Agentic while loop for neuron"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ai", "agent", "loop", "llm"]
categories = ["development-tools"]
exclude = ["CLAUDE.md"]

[dependencies]
neuron-types.workspace = true
neuron-tool.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
neuron-context.workspace = true
schemars.workspace = true
thiserror.workspace = true
chrono.workspace = true
