[package]
name = "neuron-loop"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
description = "Agentic loop for Rust — multi-turn tool dispatch, streaming, and conversation management over any LLM provider"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/neuron-loop"
keywords = ["ai", "llm", "agent", "agentic", "streaming"]
categories = ["science", "asynchronous"]
exclude = ["CLAUDE.md"]

[dependencies]
neuron-types.workspace = true
neuron-tool.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
neuron-context.workspace = true
schemars.workspace = true
thiserror.workspace = true
chrono.workspace = true
criterion.workspace = true

[[bench]]
name = "turn_latency"
harness = false
