[package]
name = "neuron-op-react"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ReAct operator for neuron — model + tools in a reasoning loop"

[dependencies]
layer0 = { path = "../layer0" }
neuron-turn = { path = "../neuron-turn" }
neuron-tool = { path = "../neuron-tool" }
neuron-hooks = { path = "../neuron-hooks" }
async-trait = "0.1"
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-str"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
