[package]
name = "neuron-op-single-shot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Single-shot operator — one model call, no tools, return immediately"

[dependencies]
layer0 = { path = "../layer0" }
neuron-turn = { path = "../neuron-turn" }
async-trait = "0.1"
rust_decimal = { version = "1", features = ["serde-str"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
