[package]
name = "neuron-orch-kit"
version = "0.1.0"
edition = "2021"
description = "Unopinionated wiring kit for composing neuron systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/secbear/neuron"

[dependencies]
async-trait = "0.1"
layer0 = { path = "../layer0" }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde_json = "1"
