[package]
name = "neuron-orch-kit"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unopinionated wiring kit for composing neuron systems"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "orchestration", "composition"]

[dependencies]
async-trait = "0.1"
layer0 = { path = "../layer0" }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde_json = "1"
